--- a/client/dev/partials/projects/structure/collection-form-list.html
+++ b/client/dev/partials/projects/structure/collection-form-list.html
@@ -28,7 +28,7 @@
 	</tbody>
 	<tbody ng-if="project.forms.length != 0" ng-sortable="{handle: '.handle'}">
 		<tr ng-repeat="form in project.forms">
-			<td class="handle"><i class="fa fa-bars"></i></td>
+			<td class="handle"><i class="fa fa-sort fa-fw"></i></td>
 			<td>
 				<a ui-sref="main.project.structure.collection_form_edition({formId: form.id})">
 					{{form.name}}
