--- a/client/dev/partials/projects/structure/user-list.html
+++ b/client/dev/partials/projects/structure/user-list.html
@@ -26,7 +26,7 @@
 
 	<tbody ng-if="project.users.length != 0" ng-sortable="{handle: '.handle'}">
 		<tr ng-repeat="user in project.users">
-			<td class="handle"><i class="fa fa-bars"></i></td>
+			<td class="handle"><i class="fa fa-sort fa-fw"></i></td>
 
 			<td style="text-align: center">
 				<img src="/img/logo_blue.svg" style="height: 17px" ng-if="user.type=='internal'" />
